update the deploy wf

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -11,6 +11,24 @@ jobs:
   deployment:
     runs-on: ubuntu-latest
     steps:
-      - name: Deploy to PythonAnyWhere
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+
+      - name: Upload code to PythonAnywhere via SCP
+        env:
+          PA_USERNAME: ${{ secrets.PA_USERNAME }}
         run: |
-          echo 'Testing the deployment workflow'
+          scp -r ./backend/* $PA_USERNAME@ssh.pythonanywhere.com:/home/$PA_USERNAME/your-backend-folder/
+
+      - name: Reload PythonAnywhere web app
+        env:
+          PA_USERNAME: ${{ secrets.PA_USERNAME }}
+          PA_API_TOKEN: ${{ secrets.PA_API_TOKEN }}
+        run: |
+          curl -X POST https://www.pythonanywhere.com/api/v0/user/$PA_USERNAME/webapps/yourdomain.pythonanywhere.com/reload/ \
+            -H "Authorization: Token $PA_API_TOKEN"
