--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -14,21 +14,20 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - name: Setup SSH Agent
+        uses: webfactory/ssh-agent@v0.9.1
         with:
-          python-version: '3.10'
+          ssh-privet-key: ${{ secrets.PA_SSH_PRIVATE_KEY}}
 
-      - name: Upload code to PythonAnywhere via SCP
-        env:
-          PA_USERNAME: ${{ secrets.PA_USERNAME }}
+      - name: Add PythonAnywhere to known_hosts
         run: |
-          scp -r ./backend/* $PA_USERNAME@ssh.pythonanywhere.com:/home/$PA_USERNAME/your-backend-folder/
+          ssh-keyscan -H ${{ secrets.PA_HOST }} >> ~/.ssh/known_hosts
 
-      - name: Reload PythonAnywhere web app
+      - name: Deploy backend using rsync
         env:
-          PA_USERNAME: ${{ secrets.PA_USERNAME }}
-          PA_API_TOKEN: ${{ secrets.PA_API_TOKEN }}
+          PA_USERNAME: ${{secrets.PA_USERNAME}}
+          PA_HOST: ${{secrets.PA_HOST}}
+          PA_TARGET_DIR: ${{secrets.PA_TARGET_DIR}}
         run: |
-          curl -X POST https://www.pythonanywhere.com/api/v0/user/$PA_USERNAME/webapps/yourdomain.pythonanywhere.com/reload/ \
-            -H "Authorization: Token $PA_API_TOKEN"
+          echo "Syncing ./backend/ directory to PythonAnywhere target: $PA_TARGET_DIR"
+          rsync -av --delete ./backend/ "${PA_USERNAME}@${PA_HOST}:${PA_TARGET_DIR}/"
