--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -30,4 +30,4 @@ jobs:
           PA_TARGET_DIR: ${{secrets.PA_TARGET_DIR}}
         run: |
           echo "Syncing ./backend/ directory to PythonAnywhere target: $PA_TARGET_DIR"
-          rsync -avzhe ssh ./backend/ "${PA_USERNAME}@${PA_HOST}:${PA_TARGET_DIR}/"
+          rsync -av ./backend/ "${PA_USERNAME}@${PA_HOST}:${PA_TARGET_DIR}/"
